--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -33,7 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.3",
     "prettier": "3.1.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
