--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.2.0"
+    "react-router": "^7.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
